--- a/index.html
+++ b/index.html
@@ -37,6 +37,14 @@ peopleware, software, real options, design thinking, learning from kids, problem
       <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
         </div>
       </div>
+   <div class="row">
+      <div class="col-xs-2">
+        I am using Brave web browser
+      </div>
+      <div class="col-xs-2">           
+        <a href="https://brave.com/msa180"  data-show-count="false">Get Brave</a>
+        </div>
+      </div>
   </div>
 </div>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
